# dots

./: .Xresources  .bashrc  .gitignore  .vimrc  .xinitrc  .zshrc  README.md  update
.config/: mimeapps.list  pavucontrol.ini
.config/alacritty/: alacritty.toml
.config/btop/: btop.conf
.config/dconf/: user
.config/dunst/: dunstrc
.config/fontconfig/: fonts.conf
.config/geany/: geany.conf  session.conf
.config/gtk-2.0/: gtkfilechooser.ini
.config/gtk-3.0/: settings.ini
.config/helix/: config.toml
.config/labwc/: autostart  menu.xml  rc.xml
.config/mozc/: .encrypt_key.db  .history.db  .session.ipc  cform.db  segment.db
.config/mpd/: database  log  state
.config/ncmpcpp/: config
.config/nsxiv/: config
.config/openbox/: autostart  menu.xml  rc.xml  rc.xml.bak
.config/picom/: picom.conf
.config/pulse/: cookie
.config/ranger/: rc.conf
.config/sfwbar/: bar.config  color.txt  menu.config  my.config  open.sh  style.css
.config/tint2/: current  default-light  honey-oats  moss  soda  tint2rc
.config/wezterm/: wezterm.lua
.themes/: Current
.vim/: .netrwhist
scripts/: cols  get_brightness.sh  init_dir.sh  init_pkgs.sh  init_vim.sh  pkgs_init  run.sh  screenshot  screenshot.sh  scs  shot  start_mpd.sh  xdg_set_default.sh
workspace/sysmon/: meson.build
workspace/sysmon/assets/: style.css
workspace/sysmon/resources/: sysmon.gresource.xml
workspace/sysmon/scripts/: get_bat_level.sh  get_brightness.sh  get_mem_usage.sh  get_vol_level.sh
workspace/sysmon/src/: main.vala
workspace/sysmon/subprojects/: my_panel_lib
(+247 files in other folders)
